Create DB Context

--- a/CD_Collection/appsettings.json
+++ b/CD_Collection/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDbString": "Data source=CompactDiscDb.db"
+  }
 }
-
